AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} DIR_SRCS)
ADD_EXECUTABLE(spiritTest1  ${DIR_SRCS})
TARGET_LINK_LIBRARIES(spiritTest1  boost_thread pthread)

install(TARGETS spiritTest1
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${SPIRIT_SUB_BIN_INSTALL_DIR})

