AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} DIR_SRCS)
ADD_EXECUTABLE(variantTest  ${DIR_SRCS})
TARGET_LINK_LIBRARIES(variantTest  boost_regex boost_filesystem boost_system boost_thread pthread)

install(TARGETS variantTest
        LIBRARY DESTINATION ${LIB_INSTALL_DIR}
        ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
        RUNTIME DESTINATION ${VARIANT_SUB_BIN_INSTALL_DIR})

